// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Currency statistic 1`] = `
<div
  className="bg-transparent border border-solid border-darker rounded-[1px] font-sans h-36 w-min min-w-[16rem] md:w-full md:min-w-[12rem] ml-[21.5px] pr-5 flex items-center"
>
  <div
    className="bg-transparent ml-[-21.5px] relative"
  >
    <div
      className="left-5 absolute w-3 h-20 z-10 bg-credix-primary"
    />
    <div
      className="capitalize relative z-20"
    >
      TVL
    </div>
    <div
      className="text-6xl font-bold relative z-20"
    >
      14.8M
      <span
        className="text-sm font-normal"
      >
        USDC
      </span>
    </div>
  </div>
</div>
`;

exports[`Percentage statistic 1`] = `
<div
  className="bg-transparent border border-solid border-darker rounded-[1px] font-sans h-36 w-min min-w-[16rem] md:w-full md:min-w-[12rem] ml-[21.5px] pr-5 flex items-center"
>
  <div
    className="bg-transparent ml-[-21.5px] relative"
  >
    <div
      className="left-5 absolute w-3 h-20 z-10 bg-credix-primary"
    />
    <div
      className="capitalize relative z-20"
    >
      Estimated APY
    </div>
    <div
      className="text-6xl font-bold relative z-20"
    >
      13.8%
      <span
        className="text-sm font-normal"
      />
    </div>
  </div>
</div>
`;
